# Datalib

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
source/: conf.py
src/datalib/: analysis.py  data_statistics.py  filled_data.csv  main.py  manipulation.py  visualization.py
tests/: test_analysis.py  test_data_statistics.py  test_manipulation.py  test_visualization.py
