[tool.poetry]
name = "my-datalib-sirine"
version = "0.1.0"
description = ""
authors = ["sirine-de <sirine.pfe22@gmail.com>"]
readme = "README.md"
packages = [{ include = "datalib", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
pandas = "^1.5"
matplotlib = "^3.6"
scikit-learn = "^1.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
